# rc_racecar

./: .gitmodules  README.md
asw_lidar/: CMakeLists.txt  package.xml
asw_lidar/config/: state.yaml  task.yaml
asw_lidar/include/lidar_lib/: asw_lidar_lib.h  cubic_spline_planner.h  lidar_lib.h
asw_lidar/include/task/: Task1.hpp  Task2.hpp  Task3.hpp  Task4.hpp  Task5.hpp
asw_lidar/launch/: asw_lidar.launch  start.launch
asw_lidar/msg/: obs.msg
asw_lidar/rviz/: asw_lidar.rviz
asw_lidar/src/: main.cpp
rc_arduino/: rc_arduino.ino
rc_control/: CMakeLists.txt  package.xml
rc_control/config/: vesc_smoothing.yaml
rc_control/launch/: rc_control.launch
rc_control/src/: ackermann_cmd_mux.py  throttle_interpolator.py
rplidar_ros/__MACOSX/rplidar_ros/sdk/src/: ._sl_lidarprotocol_codec.cpp
vesc/vesc_ackermann/include/vesc_ackermann/: vesc_to_odom.h
vesc/vesc_ackermann/src/: vesc_to_odom.cpp
